--- a/style.css
+++ b/style.css
@@ -54,7 +54,20 @@ body {
 .btn.active {
   background-color: #666;
   color: white;
+}.button-group {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
 }
+
+@media screen and (max-width: 600px) {
+  .btn {
+    flex: 1 1 100px;  /* Makes each button take full or half row depending on space */
+    font-size: 16px;
+  }
+}
+
 
 /* Photo Grid Styles */
 .row {
@@ -76,6 +89,17 @@ body {
   vertical-align: middle;
 }
 /*part2*/
+#part2 {
+  text-align: center;
+  padding: 20px;
+}
+
+#part2 img {
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+  transition: transform 0.5s;
+}
 #part2 img:hover {
     -webkit-transform: scaleX(-1);
     transform: scaleX(-1);
@@ -90,14 +114,15 @@ body {
 /* The flip box container */
 .flip-box {
   background-color: transparent;
-  width: 300px;
-  height: 200px;
+  width: 100%;
+  max-width: 300px;
+  height: auto;
+  aspect-ratio: 3 / 2; /* Keeps it proportional */
+  margin: auto;
   border: 1px solid #f1f1f1;
-  perspective: 1000px; /* Depth for the 3D effect */
-  margin: 0 auto;
+  perspective: 1000px;
 }
 
-/* The inner container for front and back sides */
 .flip-box-inner {
   position: relative;
   width: 100%;
@@ -107,30 +132,42 @@ body {
   transform-style: preserve-3d;
 }
 
-/* Flip the box on hover */
 .flip-box:hover .flip-box-inner {
   transform: rotateY(180deg);
 }
 
-/* Front and back side positions */
 .flip-box-front, .flip-box-back {
   position: absolute;
   width: 100%;
   height: 100%;
-  -webkit-backface-visibility: hidden; /* Safari */
+  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
 
-/* Front side style */
-.flip-box-front {
-  background-color: #bbb;
-  color: black;
+.flip-box-front img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-/* Back side style */
 .flip-box-back {
   background-color: dodgerblue;
   color: white;
   transform: rotateY(180deg);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
+
+@media screen and (max-width: 600px) {
+  .btn {
+    width: 100%;
+    font-size: 18px;
+  }
+
+  .flip-box {
+    max-width: 90%;
+  }
+}
